fix: module java.base does not "opens java.nio" to org.apache.arrow.memory.core