@@ -122,6 +122,7 @@ goto okClasspath
 set LOCAL_JAVA_OPTS=^
  -ea^
  -cp %CLASSPATH%^
+ --add-opens=java.base/java.nio=ALL-UNNAMED^
  -DIGINX_HOME=%IGINX_HOME%^
  -DIGINX_DRIVER=%IGINX_DRIVER%^
  -DIGINX_CONF=%IGINX_CONF%
